# stratego

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  agent.py  arena.py  coach.py  env.py  game.py  helpers.py  logic.py  main.py  mcts.py  mcts_setup.py  models.py  pieces.py  position.py  pyproject.toml  representation.py  setup.cfg  setup.py  state.py  stratego-averages.p  stratego-episode_won.p  test.py  test2.py  tox.ini  train.py  trainer.py  typedefs.py  utils.py  utils_setup.py
agent/: __init__.py  alphazero.py  base.py  minmax.py  random.py
cmake/: Conan.cmake  Doxygen.cmake  Targets.cmake  TargetsTest.cmake
cythonize/: helpers.c  helpers.pyx  mcts.c  mcts.cp36-win_amd64.pyd  mcts.pyx
cythonized/: __init__.py  helpers.cp36-win_amd64.pyd  helpers.pyx  helpers_setup.py  mcts.py  mcts.pyx  mcts_setup.py  utils.py  utils.pyx  utils_setup.py
docs/: readme_board_plot.py
saved_models/: checkpoint_0.pth.tar.examples  finder.pkl  finder_best.pkl  finder_current.pkl  fourpieces.pkl  fourpieces_best.pkl  fourpieces_current.pkl  maze_best.pkl  mazer.pkl  mazer_best.pkl  mazer_current.pkl  stratego.pkl  stratego_best.pkl  stratego_current.pkl  stratego_deep.pkl  stratego_deep2.pkl  stratego_deepfc.pkl  stratego_fullconnect.pkl  stratego_fullconnect2.pkl  stratego_linear.pkl  stratego_linear2.pkl  stratego_linear_current.pkl  threepieces.pkl  threepieces_best.pkl  threepieces_current.pkl  twopieces.pkl  twopieces_best.pkl  twopieces_current.pkl
src/stratego/: __init__.py  arena.py  game.py
src/stratego/agent/: __init__.py  alphazero.py  base.py  dqn.py  minmax.py  random.py
src/stratego/algorithm/: __init__.py  alphazero.py  base.py  dqn.py  mcts.py
src/stratego/algorithms/: __init__.py  algorithms.py  alphazero.py  dqn.py  mcts.py
src/stratego/core/: __init__.py  action.py  board.py  config.py  game_defs.py  logic.py  piece.py  position.py  state.py
src/stratego/core/_core/: __init__.py
src/stratego/core/_core/binding/: init_logic.cpp
src/stratego/core/_core/include/stratego/: logic.hpp
src/stratego/core/binding/: module.cpp
src/stratego/core/impl/: logic.cpp
src/stratego/core/include/stratego/: logic.h
src/stratego/learning/: __init__.py  networks.py  representation.py  rl_defs.py
src/stratego/stratego/: CMakeLists.txt  main.cpp
src/stratego/stratego/board/: BoardStratego.cpp  BoardStratego.hpp  PieceStratego.hpp
src/stratego/stratego/game/: GameStratego.cpp  GameStratego.hpp  StateStratego.cpp  StateStratego.hpp
src/stratego/stratego/logic/: LogicStratego.cpp  LogicStratego.hpp
src/stratego/stratego/nn/model/modules/: AlphazeroStratego.hpp
src/stratego/stratego/nn/representation/: RepresenterStratego.cpp  RepresenterStratego.hpp
src/stratego/stratego/nn/training/: StateRepresentation.cpp  StateRepresentation.hpp
src/stratego/utils/: __init__.py  utils.py
stratego/: __init__.py  action.py  arena.py  coach.py  game.py  game_defs.py  logic.py  mcts.py  models.py  piece.py  state.py  test.py  test2.py  train.py  utils.py
stratego/agent/: __init__.py  alphazero.py  azagent.py  base.py  dqn.py  minmax.py  random.py
stratego/algorithms/: __init__.py  algorithms.py  alphazero.py  dqn.py  mcts.py
stratego/core/: __init__.py  action.py  position.py  state.py
stratego/engine/: __init__.py  action.py  board.py  game_defs.py  logic.py  piece.py  position.py  state.py
stratego/learning/: __init__.py  coach.py  mcts.py  models.py  networks.py  replay.py  representation.py  reward.py  rl_defs.py  teacher.py
stratego/spatial/: __init__.py  board.py  position.py
stratego/utils/: __init__.py  utils.py
test/: CMakeLists.txt  build_board.py  test_engine.py  test_logic.py  test_mcts.py  utils.py
tests/cpp/: LogicStrategoTest.cpp  LogicStrategoTest.hpp  RepresenterStrategoTest.cpp  RepresenterStrategoTest.hpp  StateStrategoTest.cpp  StateStrategoTest.hpp
training/: dqn.py
