[metadata]
name = stratego
author = Michael Aichmueller
author_email = m.aichmueller@gmail.com
version = attr: stratego.__version__
description = A Python Framework for AI development on the board game Stratego
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = stratego, ai, artificial, intelligence, rl, reinforcement, learning, board game
license = MIT
url = https://github.com/maichmueller/stratego
classifiers =
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    numpy
    torch
    matplotlib
cmake_install_dir = src.stratego

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.rst

